--- a/uhl.shannon/index.html
+++ b/uhl.shannon/index.html
@@ -13,25 +13,51 @@
 		<p>Such a cool website</p>
 	</header>
 
-
-	<!-- nav.nav.ul.li*4a[href=$articl$].{Link $} -->
+	<!-- nav.nav>ul>li*4>a[href=#article$]>{Link $} -->
 	<nav class="nav">
-		<ul class="li a" href="#articles1">Link 1</ul>
-		<ul class="li a" href="#articles2">Link 2</ul>
-		<ul class="li a" href="#articles3">Link 3</ul>
-		<ul class="li a" href="#articles4">Link 4</ul>
+		<ul>
+			<li><a href="#article1">Link 1</a></li>
+			<li><a href="#article2">Link 2</a></li>
+			<li><a href="#article3">Link 3</a></li>
+			<li><a href="#article4">Link 4</a></li>
+		</ul>
 	</nav>
 
-	<!-- .container.article#article$.article*4.h2{Artcle $}+div.article-body>p*3>lorem40 -->
-	<div class="container article article h2" id="article1">Artcle 1</div>
-	 <div class="container article article h2" id="article2">Artcle 2</div>
-	 <div class="container article article h2" id="article3">Artcle 3</div>
-	 <div class="container article article h2" id="article4">Artcle 4</div>
-	 <div class="article-body">
-	 	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A quod earum facilis consequuntur vero, cumque quidem natus deserunt nemo obcaecati tempore tenetur explicabo molestias praesentium vel cum quas, atque. Optio ea nulla quidem voluptatem, nisi asperiores aperiam rem doloribus. Placeat.</p>
-	 	<p>Blanditiis quae perferendis facere pariatur nam officiis, possimus maiores ullam sapiente dolores consequatur aliquid, dolorem, impedit fuga, magnam quos. Ducimus recusandae dolor totam, incidunt molestias, nemo vitae rerum nam explicabo atque non est hic iusto assumenda debitis, a, esse exercitationem.</p>
-	 	<p>Suscipit sunt dolorum cum alias consectetur quae placeat animi quia similique necessitatibus nemo, iure aperiam unde. Quod nesciunt labore inventore esse nam tenetur, voluptatum hic in aspernatur repudiandae beatae, dolor odit numquam doloribus at, eveniet iste tempore ratione distinctio, iusto!</p>
-	 </div> 
+	<!-- div.container>article.article#article$*4>h2{Article $}+div.article-body>p*3>lorem40 -->
+	<div class="container">
+		<article class="article" id="article1">
+			<h2>Article 1</h2>
+			<div class="article-body">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non commodi, quo officia libero nihil adipisci voluptates facilis doloremque enim distinctio tenetur iste nulla magnam repellat inventore earum nisi laudantium numquam, deleniti beatae. Cupiditate dolores quasi, quia placeat accusantium non porro.</p>
+				<p>Dicta quae quidem dolorum delectus impedit, repudiandae reprehenderit? Dolor dolores praesentium error quas repellendus voluptates placeat eaque, neque ea. Laudantium velit perferendis qui error voluptate voluptas ratione dolore, quasi tenetur vitae incidunt molestias, sit tempore beatae dolor ad sequi! Minus?</p>
+				<p>Optio, earum eos doloribus inventore error, necessitatibus sit hic illum praesentium? Eius repellendus asperiores sequi neque dolor temporibus! Reprehenderit, id iure quos. Sint, at, perferendis. Tenetur, quibusdam dicta? Quasi numquam quam assumenda, tenetur ipsa quis eum vero, aspernatur odit optio.</p>
+			</div>
+		</article>
+		<article class="article" id="article2">
+			<h2>Article 2</h2>
+			<div class="article-body">
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic atque expedita placeat similique voluptate dolore suscipit recusandae eum rerum totam, quisquam, alias! Ex voluptate non eius est ducimus ipsa dolorem, itaque quos modi nisi rerum natus provident debitis possimus ab.</p>
+				<p>Asperiores dignissimos illo, repellendus et dicta, quidem repudiandae ipsam impedit, doloremque ullam odio iusto! Nihil nulla optio quos, cumque, aspernatur qui ab vitae voluptatibus hic tenetur doloribus nobis aliquam distinctio! Illo possimus neque odit obcaecati voluptatum quia quasi voluptatem quis.</p>
+				<p>Expedita reiciendis fuga ex sed quaerat aut, voluptas, ratione pariatur perferendis cumque, id illum cupiditate architecto officia qui vitae illo natus suscipit. Obcaecati eos error odio ipsa iste velit nesciunt vitae autem, ducimus voluptatem culpa nisi voluptates consequuntur vel ratione.</p>
+			</div>
+		</article>
+		<article class="article" id="article3">
+			<h2>Article 3</h2>
+			<div class="article-body">
+				<p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Iure delectus id adipisci facilis totam at ut animi laboriosam quidem aperiam a ducimus fugiat labore sunt, maiores quod unde voluptatum dignissimos laborum velit earum perferendis, nostrum, atque inventore? Placeat, maiores, aspernatur.</p>
+				<p>Odio maxime incidunt hic iure eaque blanditiis sint quidem aperiam iusto? Dolorem minus commodi aut eaque eligendi ex aperiam soluta est eum eos doloribus, provident perspiciatis dolores fuga aliquid odit officiis asperiores. Molestias reprehenderit ipsam possimus consequatur ad molestiae minus.</p>
+				<p>Pariatur cum blanditiis, mollitia dolorem nesciunt, provident adipisci? Corrupti accusantium delectus aspernatur et praesentium ea a ipsa totam molestiae voluptatum suscipit, blanditiis quia dolor saepe eveniet! Voluptas voluptate neque, ratione explicabo veritatis libero possimus, quisquam voluptatum! Possimus hic praesentium suscipit?</p>
+			</div>
+		</article>
+		<article class="article" id="article4">
+			<h2>Article 4</h2>
+			<div class="article-body">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, voluptates laboriosam facere, quasi sint neque aperiam, iusto harum qui molestiae voluptatem itaque numquam veniam? Quod, necessitatibus sint facere debitis eveniet quas. Explicabo, fugit? Animi aspernatur placeat, magni, labore dicta eum.</p>
+				<p>Corporis saepe porro aliquid illum rem fuga nisi blanditiis optio nostrum provident. Sunt, illum pariatur fugiat at, facere nam non. Deserunt optio dolores, fugiat pariatur, aut saepe ex quam neque quo corporis quae architecto quasi suscipit alias illo modi distinctio.</p>
+				<p>Officiis distinctio quos ipsa quam deleniti? Dolores unde, delectus id, adipisci consequuntur accusamus iure laboriosam voluptatibus officiis autem nostrum ipsam voluptates deserunt, nihil odit quisquam repudiandae sint obcaecati sequi quaerat in est eum nulla dignissimos explicabo. Recusandae numquam repudiandae, quaerat.</p>
+			</div>
+		</article>
+	</div>
 
 </body>
 </html>
