--- a/uhl.shannon/wmn608/uhl.shanon/styleguide/index.html
+++ b/uhl.shannon/wmn608/uhl.shanon/styleguide/index.html
@@ -72,6 +72,30 @@
 		</div>
 	</div>
 
+		<div class="container"> 
+		<h2>Colors</h2>
+		 
+			<div class="circle-container">
+    		 <div class="circle" style="background-color: var(--color-neutral-light);">D9D9D9</div>
+   			 <div class="circle" style="background-color: var(--color-accent-lightred);">BF0413</div>
+   			 <div class="circle" style="background-color: var(--color-main-lightblue);">046CB3</div>
+   			 <div class="circle" style="background-color: var(--color-lightyellow);">F2BB13</div>
+   			</div>
+
+   			<div class="circle-container">
+   			 <div class="circle" style="background-color: var(--color-neutral-medium);">626262</div>
+   			 <div class="circle" style="background-color: var(--color-accent-mediumred);">9C030D</div>
+    		 <div class="circle" style="background-color: var(--color-main-mediumblue);">036BB2</div>
+    		 <div class="circle" style="background-color: var(--color-mediumyellow);">CF9F11</div>
+    		</div>
+    		<div class="circle-container">
+    		 <div class="circle" style="background-color: var(--color-neutral-dark);">3B3B3B</div>
+    		 <div class="circle" style="background-color: var(--color-accent-darkred);">4A0106</div>
+    		 <div class="circle" style="background-color: var(--color-main-darkblue);">0249959</div>
+    		 <div class="circle" style="background-color: var(--color-darkyellow);">A6800D</div>
+  			</div>
+   		</div>
+
 		<div class="container">
 			<h2>Cards</h2>
 			<div class="grid gap">
